actualizacion 10 de febrero

--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
+	<input type="email" required/>
+
+	<input type="checkbox" class="toggle"><div class="checked"></div>
 	<!-- contenido del documento -->
 	<!-- movil first (iniciando desde el tampaño de dispositvo móvil) -->
+	<ul>
+			
+		<li data-RobotOwner="Koji Kabuto">Mazinger</li>
+		<li data-RobotOwner="Sayaka Yumi">Aphroite</li>
+		<li data-RobotOwner="Nuke">Boss</li>
+	</ul>
 	<div class="topbar background-pink" id="js-topbar">
 		<nav>
 			<ul>
-				<li><a href="#">Inicio</a></li>
+				<li><a href="#" data->Inicio</a></li>
 				<li><a href="#">Contacto</a></li>
 				<li><a href="#">Deportes</a></li>
 				<li><a href="#">Sucesos</a></li>
@@ -47,6 +56,7 @@
 	</section>
 	<footer>
 		<!-- pie de pagina -->
+
 	</footer>
 </body>
 </html>
