+indext.html y actualizacion de fuentes.html

--- a/fuentes.html
+++ b/fuentes.html
@@ -6,6 +6,8 @@
 	<title>Fuentes</title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="style/fuente.css" />
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	 <script type="text/javascript" src="js/fuentes.js"></script>
 </head>
 <body>
 	<header class="main-header">
@@ -20,7 +22,7 @@
 	<main class="cards-group">
 		<div class="card" data-ciudad="valencia" >
 			<header class="card__header">
-				<h1 class="card__title">Valencia</h1>
+				<h1 data-city class="card__title">Valencia</h1>
 				<h2 class="card__date">07:39</h2>
 			</header>
 			<div class="card__info">
